--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Speech Detection</title>
   </head>
   <body>
+    <div class="words" contenteditable></div>
 
     <script src="script.js"></script>
   </body>
